# gES

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
benches/: CMakeLists.txt  iteration.cpp
include/ges/: arena.hpp  batcher.hpp  core.hpp  delegate.hpp  dispatcher.hpp  event_info.hpp  event_queue.hpp  viewer.hpp
src/: dispatcher.cpp  event_queue.cpp
tests/: CMakeLists.txt  test.cpp
